# RustPathTracer

./: Cargo.toml  README.md
src/: camera.rs  intersection.rs  main.rs  material.rs  ray.rs  scene.rs  shader.rs  sphere.rs  triangle.rs  vec.rs
